--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
   		<artifactId>slf4j-api</artifactId>
   		<version>1.6.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.janino</groupId>
+  		<artifactId>janino</artifactId>
+  		<version>2.5.16</version>
+  	</dependency>
   </dependencies>
 </project>
