--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/janino/janino/2.5.16/janino-2.5.16.jar"/>
   <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-classic/0.9.29/logback-classic-0.9.29.jar" sourcepath="M2_REPO/ch/qos/logback/logback-classic/0.9.29/logback-classic-0.9.29-sources.jar">
     <attributes>
       <attribute value="jar:file:/C:/Users/angela/.m2/repository/ch/qos/logback/logback-classic/0.9.29/logback-classic-0.9.29-javadoc.jar!/" name="javadoc_location"/>
