--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
   		<artifactId>janino</artifactId>
   		<version>2.5.16</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.2</version>
+  	</dependency>
   </dependencies>
 </project>
